# Parkour-Game-Jevgenijs-Bubins

CLionProjects/Game/: CMakeLists.txt  main.cpp
